2008-03-12  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* AutoGeneratedField.cs, CheckBoxField.cs: fixed OnDataBindField,
	should hide checkbox only if DataItem is not defined

2008-02-25 Igor Zelmanovich <igorz@mainsoft.com>

	* GridView.cs:
	at Update and Delete use not read only coppies of dictionaries
	in event argumens, that allows user to change them before corresponding
	DataSource's method is called.

2008-01-23  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* CheckBox.cs: fiexed RenderInput, should not render RenderInput on
	selected RadioButton

2008-02-20 Igor Zelmanovich <igorz@mainsoft.com>

	* Login.cs: render id attribute of root element correctly.

2008-02-07 Igor Zelmanovich <igorz@mainsoft.com>

	* Login.cs: render id attribute of root element correctly.

2008-02-05  Marek Habersack  <mhabersack@novell.com>

	* FileUpload.cs: make sure FileContent always returns the input
	stream positioned at the beginning. Fixes bug #356846

2008-01-31 Igor Zelmanovich <igorz@mainsoft.com>

	* Calendar.cs: resolve Next/Prev. month link date correctly.

2008-01-29 Igor Zelmanovich <igorz@mainsoft.com>

	* TreeView.cs: add XPFileExplorer icon set.

2008-01-28 Igor Zelmanovich <igorz@mainsoft.com>

	* Menu.js: dynamic nodes are positioned after hover style of 
	parent node is applied.

2008-01-24  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* DataSourceCacheManager.cs: fixed GetKeyFromParameters, incase more
	than one datasource using the same object with the same select method

2008-01-23 Igor Zelmanovich <igorz@mainsoft.com>

	* ValidationSummary.cs:
	refactoring: If page contents instance of IScriptManager, it calls 
	it's API instead Page.ClientScript.									

2008-01-23 Igor Zelmanovich <igorz@mainsoft.com>

	* Menu.cs: fixed rendering.

2008-01-16 Igor Zelmanovich <igorz@mainsoft.com>

	* Wizard.cs:
	manage history state on "MovePrevious" action.	

2008-01-16 Igor Zelmanovich <igorz@mainsoft.com>

	* BulletedList.cs:
	resolve BulletImageUrl,